--- a/k8/gitops/rbac/clusterrolebinding.yaml
+++ b/k8/gitops/rbac/clusterrolebinding.yaml
@@ -12,5 +12,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: argocd-application-controller
-    namespace: argocd
+    namespace: openshift-gitops
 
