--- a/k8/gitops/rbac/serviceaccount.yaml
+++ b/k8/gitops/rbac/serviceaccount.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: argocd-application-controller
-  namespace: argocd
+  namespace: openshift-gitops
   labels:
     app.kubernetes.io/name: argocd
     app.kubernetes.io/component: application-controller
